# aseq-linux-examples

./: CMakeLists.txt  deploy.sh
applications/: CMakeLists.txt
applications/examples/: CMakeLists.txt
applications/examples/linux/: CMakeLists.txt
applications/examples/linux/example_link_installed_shared_library/: CMakeLists.txt  main.c
applications/examples/linux/example_multiple_devices/: CMakeLists.txt  main.c
applications/examples/linux/example_single_device/: CMakeLists.txt  main.c
applications/examples/windows/: CMakeLists.txt
applications/examples/windows/example_app_VB/: basic.sln
applications/examples/windows/example_app_VB/basic/: Form1.Designer.vb  Form1.vb  basic.vbproj  dllinterface.vb
applications/examples/windows/example_app_VB/basic/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Settings.Designer.vb
applications/examples/windows/example_app_c_mt_core/: CMakeLists.txt  main.c
applications/examples/windows/example_app_c_wrapper/: CMakeLists.txt  main.c
applications/utilites/: CMakeLists.txt
applications/utilites/calibration_to_flash/: CMakeLists.txt  Calibration_1398.txt  libspectr.h  main.cpp
cmake/: FindSpectrometer.cmake
docs/html/: dir_35f6d208744f121f46a6eb253d66aaa5.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  group___a_p_i.html  group___a_p_i.js  index.html  libspectrometer_8h_source.html  md_README.build.html  md_README.hardware.html  md_READMEs_README.build.html  md_READMEs_README.hardware.html  md_READMEs_mainpage.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html
